--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -51,7 +51,7 @@
     },
     "velo-mangue": {
       "line-1": "Utiliser un vélo électrique pour se déplacer a beaucoup moins d’impacts sur le climat que d’autres modes de transports qui utilisent des combustibles fossiles, même si on prend en compte la fabrication du vélo et de la batterie.",
-      "line-2": "Le bilan carbone de la mangue a, comme tous les fruits exotiques, un bilan carbone alourdit par son transport. Les impacts de la mangue, souvent importée par avion, est encore plus important que d’autres fruits exotiques qui voyagent par bateau."
+      "line-2": "Le bilan carbone de la mangue a, comme tous les fruits exotiques, un bilan carbone alourdi par son transport. Les impacts de la mangue, souvent importée par avion, sont encore plus importants que d’autres fruits exotiques qui voyagent par bateau."
     }
   },
   "clipboard": {
