WIP on fix/accessibilit

--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -207,6 +207,7 @@
   },
   "category-simulator": {
     "passenger": "passager[s]",
+    "in": "dans le",
     "legend": {
       "construction": "Construction",
       "usage": "Usage"
