feat: add lvao resource

--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -470,6 +470,7 @@
     "chauffage-bois": "Adoptar calefacción de madera",
     "wattris": "Simular el consumo eléctrico de tu hogar",
     "ngc": "Estimar tu huella de carbono de consumo",
+    "lvao": "Alarga la vida de tus objetos",
     "agir-tt": "¿El teletrabajo, qué cambia para el planeta?",
     "calendar": "Calendario de frutas y verduras de temporada",
     "livraison": "Descargar la guía “E-consumidor & responsable”",
