--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -468,6 +468,7 @@
     "chauffage-bois": "Adopter le chauffage au bois",
     "wattris": "Simuler la consommation électrique de son logement",
     "ngc": "Estimer son empreinte carbone de consommation",
+    "lvao": "Prolonger la vie de ses objets",
     "agir-tt": "Le télétravail, ça change quoi pour la planète ?",
     "calendar": "Calendrier des fruits et légumes de saison",
     "livraison": "Télécharger le guide “E-consommateur & responsable”",
