--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -337,7 +337,7 @@
   },
   "equivalent": {
     "year": "año[s]",
-    "hypotheses": "Hipótesis",
+    "hypotheses": "Hipótesis : ",
     "fabrication": "Fabricación",
     "usage": "Uso",
     "fdv": "Fin de vida",
