--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -67,6 +67,10 @@
     "usage": "Usage",
     "apercu": "APERÇU DU PARTAGE",
     "share": "Partager",
+    "communicate": "POUR COMMUNIQUER SUR NOS OUTILS",
+    "kitTitle": "Kit de communication",
+    "kitDescription": "Tout ce qu’il faut pour communiquer sur Impact CO₂",
+    "kitLink": "Consulter",
     "integrate": "Intégrer",
     "preview": "Aperçu de l'integration",
     "next-actions": "Aller plus loin",
