feat: Add kit on share (#747)

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -69,6 +69,10 @@
     "usage": "Use",
     "apercu": "SHARING OVERVIEW",
     "share": "Share",
+    "communicate": "TO COMMUNICATE ON OUR TOOLS",
+    "kitTitle": "Communication kit",
+    "kitDescription": "Everything you need to communicate on Impact CO₂",
+    "kitLink": "Consult",
     "integrate": "Integrate",
     "preview": "Preview the integration",
     "next-actions": "Explore further",
