--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -70,6 +70,10 @@
     "apercu": "VISTA PREVIA DEL COMPARTIR",
     "share": "Compartir",
     "integrate": "Integrar",
+    "communicate": "COMUNICAR SOBRE NUESTRAS HERRAMIENTAS",
+    "kitTitle": "Kit de comunicación",
+    "kitDescription": "Todo lo que necesitas para comunicar sobre el impacto del CO₂",
+    "kitLink": "Consultar",
     "preview": "Vista previa de la integración",
     "next-actions": "Siguientes acciones",
     "comparison": "Cambiar el modo de transporte comparar",
