first part review

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -492,7 +492,7 @@
     "fiches": "Download the printable quiz sheets"
   },
   "alimentation": {
-    "title": "Discover <important>the carbon impact of foods</important> presented by...",
+    "title": "Discover <important>the carbon impact for 1kg of food</important> presented by...",
     "label": "Select how to group the results",
     "group": "Food groups (meats, fish, dairy products...)",
     "rayon": "Store sections (savory groceries, bakery, deli...)",
