--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -377,7 +377,16 @@
         "clefusb": "Capacidad promedio (16GB).",
         "box": "Uso personal y profesional; xDSL, FTTx.",
         "spam": "No leído.",
-        "stockagedonnee": "Durante 1 año."
+        "stockagedonnee": "Durante 1 año.",
+        "boeuf": "Promedio de los factores de emisión de costilla de res, entrecot, lengua de res, bistec de falda, paleta de res, carrillera de res",
+        "veau": "Promedio de los factores de emisión de costilla de ternera, paleta de ternera, escalope de ternera, nuez de ternera, pecho de ternera y molleja de ternera",
+        "dorade": "Promedio de los factores de emisión de dorada de cultivo y dorada salvaje",
+        "beurre": "Promedio de los factores de emisión de mantequilla sin sal y mantequilla con sal",
+        "fromagedure": "Promedio de los factores de emisión de varios quesos duros: Emmental, Gruyère, Comté, Gouda, etc.",
+        "fromagemolle": "Promedio de los factores de emisión de varios quesos blandos: Camembert, Brie, Maroilles, Mont-d'Or, etc.",
+        "fromagebleu": "Promedio de los factores de emisión de varios quesos azules: Roquefort, Bleu d'Auvergne, Gorgonzola, etc.",
+        "riz": "Promedio de los factores de emisión de varios arroces: Arroz blanco, integral, rojo, salvaje",
+        "ble": "Promedio de los factores de emisión de varios trigos: Trigo duro entero, trigo precocido, sémola de trigo, trigo blando"
       },
       "post": {
         "ski": "Incluye: el impacto de carbono del transporte (52%), alojamiento (4%), alimentos (8%), la estación de esquí (3%), infraestructura, equipo y servicios (17%), y equipo (16%).",
@@ -500,7 +509,7 @@
     "click": "Haga clic en una categoría para mostrar su contenido",
     "biggest": "Impacto más alto",
     "smallest": "Impacto más bajo",
-    "more": "+ {count} otros",
+    "more": "otros",
     "impact": "{value}% del impacto más alto",
     "hide": "Ocultar",
     "viandes": "Carnes",
