feat: add infography on quiz

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -1,5 +1,6 @@
 {
   "quiz": {
+    "infography": "REVIEW THE ORDERS OF MAGNITUDE",
     "question": "Question",
     "previous": "Prev.",
     "title": "In your opinion, what has <important>the least</important> impact on the climate?",
