--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -1,5 +1,6 @@
 {
   "quiz": {
+    "infography": "REVISAR LOS PEDIDOS DE TALLAS",
     "question": "Pregunta",
     "previous": "Ant.",
     "title": "Según tú, ¿qué tiene <important>menos</important> impacto en el clima?",
