review from Clémence

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -535,7 +535,7 @@
     "poissons": "Fish and seafood",
     "laitier": "Eggs and dairy products",
     "cereales": "Cereals and legumes",
-    "autres": "Prepared dishes",
+    "plats": "Prepared dishes",
     "encas": "Snacks",
     "fruits": "Fruits and vegetables",
     "boucherie": "Butchery",
