--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -535,7 +535,7 @@
     "poissons": "Pescados y mariscos",
     "laitier": "Huevos y productos lácteos",
     "cereales": "Cereales y legumbres",
-    "autres": "Platos preparados",
+    "plats": "Platos preparados",
     "encas": "Aperitivos",
     "fruits": "Frutas y verduras",
     "boucherie": "Carnicería",
