--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -535,7 +535,7 @@
     "poissons": "Poissons et fruits de mer",
     "laitier": "Oeufs et produits laitiers",
     "cereales": "Céréales et légumineuses",
-    "autres": "Plats préparés",
+    "plats": "Plats préparés",
     "encas": "En-cas",
     "fruits": "Fruits et légumes",
     "boucherie": "Boucherie",
