--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -398,6 +398,7 @@
         "stockagedonnee": "Pendant 1 an.",
         "boeuf": "Moyenne des facteurs d’émission de la côte de boeuf, l’entrecôte, la langue de boeuf, la bavette, l’épaule de boeuf, la joue de boeuf",
         "veau": "Moyenne des facteurs d’émission de la côte de veau, épaule de veau, escalope de veau, noix de veau, poitrine de veau et riz de veau",
+        "porc": "Moyenne des facteurs d’émission de la côte de porc, échine de porc, poitrine de porc, épaule de porc",
         "dorade": "Moyenne des facteurs d’émission de la dorade royale d’élevage et la dorade royale sauvage",
         "beurre": "Moyenne des facteurs d’émission du beurre doux et beurre salé",
         "fromagedure": "Moyenne des facteurs d’émission des différents fromages à pâte dure : Emmental, gruyère, comté, gouda etc.",
