--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -518,6 +518,7 @@
     "ico2-transport": "Calculate the carbon impact of your journeys",
     "ico2-fruitsetlegumes": "Discover seasonal fruits and vegetables and their impact",
     "ico2-repas": "Comparing the carbon impact of meals",
+    "ico2-fiches-alimentation": "Download impact alimentation sheets",
     "fiches": "Download the printable quiz sheets"
   },
   "alimentation": {
