--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -518,6 +518,7 @@
     "ico2-transport": "Calcule el impacto de carbono de sus viajes",
     "ico2-fruitsetlegumes": "Descubre frutas y verduras de temporada y su impacto",
     "ico2-repas": "Compare el impacto de carbono de las comidas",
+    "ico2-fiches-alimentation": "Descargue las hojas del impacto alimentación",
     "fiches": "Descargue las hojas del cuestionario para imprimir"
   },
   "alimentation": {
