--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -518,6 +518,7 @@
     "ico2-transport": "Calculer l'impact carbone de vos trajets",
     "ico2-fruitsetlegumes": "Découvrir les fruits et légumes de saison et leur impact",
     "ico2-repas": "Comparer l'impact carbone des repas",
+    "ico2-fiches-alimentation": "Télécharger les fiches d’Impact Alimentation",
     "fiches": "Télécharger les fiches du quizz à imprimer"
   },
   "alimentation": {
