--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -514,6 +514,7 @@
     "ngc": "Estimate your consumption carbon footprint",
     "lvao": "Extend the life of your objects",
     "agir-tt": "What does telecommuting change for the planet?",
+    "agir-alimentation": "Understand everything: a more sustainable diet",
     "calendar": "Seasonal fruits and vegetables calendar",
     "livraison": "Download the guide 'E-consumer & responsible'",
     "leger": "How to work with a low impact ?",
