--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -514,6 +514,7 @@
     "ngc": "Estimar tu huella de carbono de consumo",
     "lvao": "Alarga la vida de tus objetos",
     "agir-tt": "¿El teletrabajo, qué cambia para el planeta?",
+    "agir-alimentation": "Entendiéndolo todo: una dieta más sostenible",
     "calendar": "Calendario de frutas y verduras de temporada",
     "livraison": "Descargar la guía “E-consumidor & responsable”",
     "leger": "¿Cómo trabajar con bajo impacto?",
