--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -514,6 +514,7 @@
     "ngc": "Estimer son empreinte carbone de consommation",
     "lvao": "Prolonger la vie de ses objets",
     "agir-tt": "Le télétravail, ça change quoi pour la planète ?",
+    "agir-alimentation": "Tout comprendre : une alimentation plus durable",
     "calendar": "Calendrier des fruits et légumes de saison",
     "livraison": "Télécharger le guide “E-consommateur & responsable”",
     "leger": "Comment télétravailler léger ?",
