feat: add fast fashion resources

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -476,6 +476,7 @@
     "recherche": "search"
   },
   "ressources": {
+    "fast-fashion": "Understand everything: the impacts of fashion and fast fashion",
     "tri": "Sort through your cupboards to make more space at home",
     "questions": "Ask yourself the right questions before buying: Do I really need it?",
     "deuxieme-vie": "Give a second life to unused clothes and shoes",
