--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -476,6 +476,7 @@
     "recherche": "búsqueda"
   },
   "ressources": {
+    "fast-fashion": "Entendiéndolo todo: los impactos de la moda y la moda rápida",
     "tri": "Ordenar tus armarios para ganar espacio en casa",
     "questions": "Hacerse las preguntas correctas antes de comprar: ¿realmente lo necesito?",
     "deuxieme-vie": "Dar una segunda vida a la ropa y zapatos no utilizados",
