--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -504,7 +504,7 @@
     "recherche": "recherche"
   },
   "ressources": {
-    "agir": "Mieux manger : chassez les fausses idées !",
+    "fast-fashion": "Tout comprendre : les impacts de la mode et de la fast-fashion",
     "tri": "Faire le tri dans ses placards pour gagner de la place chez soi",
     "questions": "Se poser les bonnes questions avant d’acheter : en ai-je vraiment besoin ?",
     "deuxieme-vie": "Donner une seconde vie aux vêtements et chaussures non utilisées",
