--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -545,7 +545,7 @@
     "encas": "Snacks",
     "fruits": "Fruits and vegetables",
     "boucherie": "Butchery",
-    "poissonerie": "Fishmonger",
+    "n": "Fishmonger",
     "traiteur": "Deli",
     "fromagerie": "Cheese shop",
     "boulangerie": "Bakery",
