--- a/src/providers/locales/es.json
+++ b/src/providers/locales/es.json
@@ -545,7 +545,7 @@
     "encas": "Aperitivos",
     "fruits": "Frutas y verduras",
     "boucherie": "Carnicería",
-    "poissonerie": "Pescadería",
+    "poissonnerie": "Pescadería",
     "traiteur": "Charcutería",
     "fromagerie": "Quesería",
     "boulangerie": "Panadería",
