--- a/src/providers/locales/fr.json
+++ b/src/providers/locales/fr.json
@@ -545,7 +545,7 @@
     "encas": "En-cas",
     "fruits": "Fruits et légumes",
     "boucherie": "Boucherie",
-    "poissonerie": "Poissonerie",
+    "poissonnerie": "Poissonnerie",
     "traiteur": "Traiteur",
     "fromagerie": "Fromagerie",
     "boulangerie": "Boulangerie",
