fix: missing translation

--- a/src/providers/locales/en.json
+++ b/src/providers/locales/en.json
@@ -548,7 +548,7 @@
     "encas": "Snacks",
     "fruits": "Fruits and vegetables",
     "boucherie": "Butchery",
-    "n": "Fishmonger",
+    "poissonnerie": "Fishmonger",
     "traiteur": "Deli",
     "fromagerie": "Cheese shop",
     "boulangerie": "Bakery",
